     like. This partially fixes #154129. (Robert Collins)

   * Merge directives now fetch prerequisites from the target branch if
     needed.  (Aaron Bentley)

   * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)

   * ``-l`` is now a short form for ``--limit`` in ``log``.  (Matt Nordhoff)

  BUGFIXES:

   * Transform failures no longer cause ImmortalLimbo errors (Aaron Bentley,
     #137681)

   * ``uncommit`` works even when the commit messages of revisions to be
     removed use characters not supported in the terminal encoding.
     (Aaron Bentley)

   * When dumb http servers return whole files instead of the requested ranges,
     read the remaining bytes by chunks to avoid overflowing network buffers.
     (Vincent Ladeuil, #175886)

   * ``reconfigure`` is able to convert trees into lightweight checkouts.
     (Aaron Bentley)

  DOCUMENTATION:

   * Reference material has now be moved out of the User Guide and added
     to the User Reference. The User Reference has gained 4 sections as
     a result: Authenication Settings, Configuration Settings, Conflicts
     and Hooks. All help topics are now dumped into text format in the
     doc/en/user-reference directory for those who like browsing that
     information in their editor. (Ian Clatworthy)

  INTERNALS:

    * Help topics can now be loaded from files. 
      (Ian Clatworthy, Alexander Belchenko)

  API BREAKS:

  TESTING:


bzr 1.0 2007-12-14
==================

  DOCUMENTATION:

   * More improvements and fixes to the User Guide.  (Ian Clatworthy)

   * Add information on cherrypicking/rebasing to the User Guide.
     (Ian Clatworthy)

   * Improve bug tracker integration documentation. (Ian Clatworthy)

   * Minor edits to ``Bazaar in five minutes`` from David Roberts and
     to the rebasing section of the User Guide from Aaron Bentley.
     (Ian Clatworthy)


bzr 1.0rc3 2007-12-11
=====================

  CHANGES:
   